# msg

./: .gitignore  Cargo.toml  flake.nix  pyproject.toml  test.sqlite3
.github/workflows/: poetry_autotag.yml
migrations/2023-05-05-170503_create_messages/: up.sql
msg/: __init__.py  __main__.py  app.py  database.py  models.py  permissions.py  role.py  security.py  snowflake.py  user.py
msg/db/: driver.py  views.py
src/: lib.rs  main.rs  messages.rs  schema.rs  snowflake.rs  websocket.rs
src/db/: mod.rs
tests/: test_snowflake.py
