[package]
name = "msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = "0.4.24"
serde = { version="1.0.162", features=["derive"] }
tokio = { version="1.28.0", features=["full"] }
