[package]
name = "msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = "0.4.30"
futures-util = {version = "0.3.28", features = ["futures-sink", "sink"]}
http = "0.2.9"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0", features = ["full"]}
tokio-websockets = {version = "0.4.0", features = ["server", "rustls-native-roots", "client", "rand"]}
