[tool.poetry]
name = "msg"
version = "0.1.0"
description = "Open source messaging platform"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/msg"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pendulum = "^2.1.2"
aiosqlite = "^0.19.0"
asyncpg = "^0.28.0"
pydantic = "^1.10.7"
fastapi-jwt = "^0.1.12"

[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
