[tool.poetry]
name = "msg"
version = "0.1.0"
description = "Open source messaging platform"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/msg"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pendulum = "^3.0.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
pydantic = "^2.0.0"
fastapi-jwt = "^0.3.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
